<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AddDayFragment">


    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/edit_text_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hide_add_steps"
        android:inputType="numberSigned"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_text_callories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hide_add_calories"
        android:inputType="numberDecimal"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_new_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_dat" />


</LinearLayout>