<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"

    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_date_text"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_day_passed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="10dp"
                    android:text="@string/item_day_passed_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    tools:ignore="InefficientWeight" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="10dp"
        app:srcCompat="@drawable/separator" />

    <TextView
            android:id="@+id/text_view_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_steps_text" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="10dp"
            app:srcCompat="@drawable/separator" />

        <TextView
            android:id="@+id/text_view_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_calories_text" />

</LinearLayout>